<?xml version="1.0" encoding="utf-8"?>

<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/A"
            android:id="@+id/button"
            android:layout_x="20dp"
            android:layout_y="60dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/B"
            android:id="@+id/button2"
            android:layout_x="80dp"
            android:layout_y="60dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/C"
            android:id="@+id/button3"
            android:layout_x="20dp"
            android:layout_y="120dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/D"
            android:id="@+id/button4"
            android:layout_x="80dp"
            android:layout_y="120dp"/>
</AbsoluteLayout>